opti stuff, nothing to see here

--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -60,7 +60,8 @@
                                     class="img-fluid"
                                     loading="lazy"
                                     [src]="anime.anime.imgUrl"
-                                    style="width: 70px"
+                                    width="61"
+                                    height="87"
                                 />
                             </td>
                             <td>{{ anime.anime.title }}</td>
