opti stuff, nothing to see here v2

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-expand-md navbar-dark">
     <a class="navbar-brand" routerLink="home">
         <img
-            loading="lazy"
             id="homeImage"
             src="assets/ow-smol-text.webp"
             alt="alt"
+            height="35"
+            width="150"
         />
     </a>
     <button
