eliminated weird stuff in stats

--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -4,6 +4,7 @@
         animeStats !== undefined &&
         averageStats !== undefined
     "
+    height="1000"
 >
     <div id="titleDiv">
         <h1 id="title">Stats of Onlyweebs</h1>
