--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
 /* global styles */
 @font-face {
     font-display: swap;
-}
-
-* {
+    font-style: normal;
     font-family: "Lato", sans-serif;
+    src: local("/fonts/Lato-Regular.ttf") format("truetype");
 }
 
 body {
@@ -16,16 +15,8 @@ html,
 body {
     height: 100%;
 }
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 html,
 body {
     height: 100%;
-}
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
