--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<link
+    rel="preload"
+    as="style"
+    href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    onload="this.rel='stylesheet'"
+/>
+<link
+    rel="preload"
+    as="font"
+    type="font/woff2"
+    crossorigin
+    href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff2?v=4.3.0"
+/>
 <app-nav></app-nav>
 <div id="router">
     <router-outlet></router-outlet>
