--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import "~@angular/material/theming";
@@ -6,20 +7,20 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$onlyWeebs2-primary: mat-palette($mat-indigo);
-$onlyWeebs2-accent: mat-palette($mat-pink, A200, A100, A400);
+$onlyWeebs2-primary: mat.define-palette(mat.$indigo-palette);
+$onlyWeebs2-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$onlyWeebs2-warn: mat-palette($mat-red);
+$onlyWeebs2-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$onlyWeebs2-theme: mat-light-theme(
+$onlyWeebs2-theme: mat.define-light-theme(
     (
         color: (
             primary: $onlyWeebs2-primary,
@@ -32,4 +33,4 @@ $onlyWeebs2-theme: mat-light-theme(
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($onlyWeebs2-theme);
+@include mat.all-component-themes($onlyWeebs2-theme);
