fixed a view bug on nav

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand" routerLink="home" *ngIf="logoUrl !== undefined">
         <img
             id="homeImage"
-            src="{{ logoUrl }}"
+            src="assets/ow-smol-text.webp"
             alt="alt"
             height="35"
             width="150"
