--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -155,7 +155,7 @@
             <div
                 ngbDropdownMenu
                 aria-labelledby="dropdownBasic1"
-                class="dropdown-menu dropdown-menu-right"
+                class="dropdown-menu dropdown-menu-left"
             >
                 <button ngbDropdownItem class="btn-nav-link">
                     <a
