--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -96,7 +96,7 @@
                         >
                             <img
                                 src="data:image/webp;base64,{{
-                                    comment.user.image.content
+                                    comment.user.imageDto.content
                                 }}"
                                 alt="profile image"
                                 class="rounded-circle"
