--- a/src/app/onelist/onelist.component.html
+++ b/src/app/onelist/onelist.component.html
@@ -100,7 +100,7 @@
                 <img
                     loading="lazy"
                     src="data:image/webp;base64,{{
-                        comment.user.image.content
+                        comment.user.imageDto.content
                     }}"
                     alt="profile image"
                     class="rounded-circle"
